[package]
name = "axum-sea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0"
dotenvy = "^0"
sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "^1", features = ["full"] }

# Logging
tracing = "^0"
tracing-subscriber = "^0"
