[package]
name = "axum-sea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to Reduce the size of release binary.
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
dotenvy = "^0"
sea-orm = { version = "^0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "^1", features = ["full"] }

# Logging
tracing = "^0"
tracing-subscriber = "^0"
